# WoWKnock

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/grunt/: Exceptions.h  GameVersion.h  KeyData.h  Magic.h  MulticharConstant.h  Opcodes.h  ResultCodes.h  State.h
src/grunt/client/: LoginChallenge.h
src/grunt/server/: LoginChallenge.h
